--- a/2020/dmart-2020-mid.css
+++ b/2020/dmart-2020-mid.css
@@ -1,5 +1,8 @@
 
 <style>
+.mui-zebra-page{
+    background: #200258 !important;
+}
     .p-slider-product-list a {
         text-decoration: none !important;
     }
