--- a/2020/dmart-2020-mid.css
+++ b/2020/dmart-2020-mid.css
@@ -366,7 +366,7 @@
   .responsive-box.daraz .flex-item {
     margin-bottom: 1.2%;
   }
-  .responsive-box.daraz .thumb-bx .thumb {
+  .lzd-act-product-slot-endless-scroll .responsive-box.daraz .thumb-bx .thumb {
     width: 95%;
     text-align: center !important;
     left: 2.5px !important;
