--- a/2020/dmart-2020-mid.css
+++ b/2020/dmart-2020-mid.css
@@ -105,7 +105,7 @@
   }
 
   .daz-scrolling-xbanner .placeHolderControl {
-    background: #0b0b0b;
+    background: #0b0b0b00;
   }
 }
 .lzd-act-title .title {
