--- a/2020/dmart-2020-mid.css
+++ b/2020/dmart-2020-mid.css
@@ -1,5 +1,5 @@
 .mui-zebra-page {
-  background: #200258 !important;
+  background: #fff !important;
 }
 @media (max-width: 767px) {
   .lzd-act-title {
