--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -160,6 +160,7 @@
 }
 .mui-zebra-page {
   background-color: #3c0ca4 !important;
+  background-size: cover !important;
 }
 .lzd-act-title .title {
   font-family: "Montserrat", sans-serif !important;
