--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -162,6 +162,12 @@
   background-color: #3c0ca4 !important;
   background-size: cover !important;
 }
+@media(max-width: 767px{){
+  .mui-zebra-page {
+  background-color: #3c0ca4 !important;
+  background-size: contain !important;
+}
+  }
 .lzd-act-title .title {
   font-family: "Montserrat", sans-serif !important;
   font-weight: 700 !important;
