--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -158,16 +158,17 @@
     background: transparent;
   }
 }
-.mui-zebra-page {
-  background-color: #3c0ca4 !important;
-  background-size: cover !important;
-}
-@media(max-width: 767px{){
+@media(max-width: 767px(){
   .mui-zebra-page {
   background-color: #3c0ca4 !important;
   background-size: contain !important;
 }
-  }
+    }
+.mui-zebra-page {
+  background-color: #3c0ca4 !important;
+  background-size: cover !important;
+}
+
 .lzd-act-title .title {
   font-family: "Montserrat", sans-serif !important;
   font-weight: 700 !important;
