--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -353,9 +353,10 @@
   }
   .p-slider-daraz .p-slider-slider {
     top: 23px !important;
-    right: 10px !important;
+    right: 24px !important;
     height: 275px !important;
     padding: 12px 26px !important;
+    border-radius: 20px !important;
   }
   .p-slider-daraz .p-slider-product-list {
     margin: 2px !important;
