--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -167,6 +167,7 @@
 @media(min-width: 768px){
 .mui-zebra-page {
   background-color: #3c0ca4 !important;
+  background-size: contain !important;
 }
 }
 .lzd-act-title .title {
