--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -234,7 +234,7 @@
   .responsive-box.daraz {
     /*border-top: 3px solid #ddd !important;*/
   }
-  .responsive-box.daraz .flex-grid-col3 {
+  .lzd-act-product-slot-endless-scroll .responsive-box.daraz .flex-grid-col3 {
     width: 103.77% !important;
     /*border-bottom: 2px solid #ddd !important;*/
   }
