--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -454,10 +454,10 @@
   input {
     /*border-radius: 4px !important;*/
   }
-  .responsive-box.daraz .flex-item {
+  .lzd-act-product-slot-endless-scroll .responsive-box.daraz .flex-item {
     margin-bottom: 1.2%;
   }
-  .responsive-box.daraz .thumb-bx .thumb {
+  .lzd-act-product-slot-endless-scroll .responsive-box.daraz .thumb-bx .thumb {
     width: 95%;
     text-align: center !important;
     left: 2.5px !important;
