--- a/2020/Mobile Week 2020/mw.css
+++ b/2020/Mobile Week 2020/mw.css
@@ -563,6 +563,7 @@
       .daz-scrolling-xbanner .container{
         background: #fff0 !important;
     }
+}
     @media (min-width: 768px){
     .lzd-act-icon-navigation{
         background-color:transparent !important;
